# Course-Generator

./: README.md  pyproject.toml  report.md
src/latest_ai_development2/: crew.py  main.py
src/latest_ai_development2/config/: agents.yaml  tasks.yaml
