[project]
name = "latest_ai_development2"
version = "0.1.0"
description = "latest-ai-development2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
latest_ai_development2 = "latest_ai_development2.main:run"
run_crew = "latest_ai_development2.main:run"
train = "latest_ai_development2.main:train"
replay = "latest_ai_development2.main:replay"
test = "latest_ai_development2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
